--- a/styles/imprint.css
+++ b/styles/imprint.css
@@ -2,6 +2,7 @@
     display: flex;
     flex-direction: column;
     padding: 96px;
+    max-height: calc(100vh - (96px * 2) - 96px);
     gap: 24px;
 }
 
